Fix Spacing

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -1,6 +1,9 @@
 h2.subreddit_title {
     margin: 0 0 0 0
 }
+.row.gtr-uniform > * {
+    padding-top: 5em;
+}
 
 #submit {
     margin-top : 10px;
